--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,17 @@
   <li>Add a button which may only be clicked if the username is NOT an empty string</li>
   <li>Upon clicking the button, the username should be reset to an empty string</li>
 </ol>
+
+<label>Enter Name</label>
+<br>
+<input
+  type="text"
+  [(ngModel)]="username"
+  (input)="validate()">
+
+<button
+  class="btn btn-primary"
+  [disabled]="!isValid"
+  (click)="submitName()">Submit</button>
+<br>
+{{ username }}
